hard-gists/1096373/run.log
=== Docker Run Log for 1096373 ===
Started at: Mi 29. Okt 11:50:49 CET 2025

[2025-10-29 11:50:49] START: Running container for 1096373
[2025-10-29 11:50:49] SUCCESS: Container 4bcdf1a6d7a303fc889e2b4fb1f3374c023b3ebd177aa1feb0e9f71953de7001 started for 1096373
=== Container logs for 1096373 ===
  File "/snippet.py", line 19
    print "Can't open webcam"
    ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1096373 ===
[2025-10-29 11:50:51] INFO: Container 4bcdf1a6d7a303fc889e2b4fb1f3374c023b3ebd177aa1feb0e9f71953de7001 has stopped
